[package]
name = "ristretto255-dh"
version = "0.1.0"
authors = ["Deirdre Connolly <deirdre@zfnd.org>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "2.0.0", features = ["serde"] }
rand_core = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.1.0"

[dev-dependencies]
bincode = "1.2.1"
rand = "0.7"
proptest = "0.9"
proptest-derive = "0.1.0"
