[package]
name = "ristretto255-dh"
version = "0.3.0"
authors = ["Deirdre Connolly <durumcrustulum@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/ristretto255-dh"
categories = ["cryptography"]
documentation = "https://docs.rs/ristretto255-dh"
keywords = ["cryptography", "crypto", "ristretto", "diffie-hellman", "key-exchange"]
description = "Diffie-Hellman key exchange using the Ristretto255 group."
exclude = [
    ".gitignore",
    ".github/*",
]

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
curve25519-dalek = { version = "3.0.0", features = ["serde"] }
rand_core = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.1.0"

[dev-dependencies]
bincode = "1.2.1"
proptest = "1.0"
proptest-derive = "0.3.0"

[features]
nightly = []
